# chess-research

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  build.sh  devcontainer.json
analysis/advantage/: 0_generate_move_distributions.py  0_run_parallel.py  1_calculate_advantages.py  2_calculate_statistics.py  3_visualize_statistics.ipynb  4_visualize_advantage_boards.ipynb  merge.ipynb
analysis/dataset/: action_distribution_analyze.ipynb  action_distribution_gen.py  plot_dataset.py
chess_research/: __init__.py  globals.py  model.py  train.py
chess_research/data/: zstd_process.py
chess_research/eval/: data_structures.py  evaluation.py  glicko2.py  player.py  utils.py
config/: 302M_1000.json  50M_1000.json  707M_1000.json
scripts/: train_big.py
